--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 numpy==1.22.3
-plotly==5.7.0
-scikit_learn==1.0.2
-streamlit==1.8.1
+pandas==1.4.2
+plotly==5.8.0
+scikit_learn==1.1.0
+streamlit==1.9.0
+streamlit_option_menu==0.3.2
 yfinance==0.1.70
